--- a/apollo-client-side/package.json
+++ b/apollo-client-side/package.json
@@ -8,10 +8,10 @@
   "dependencies": {
     "@apollo/react-hooks": "0.1.0-beta.11",
     "apollo-boost": "0.4.3",
-    "apollo-client": "2.6.3",
-    "apollo-link": "^1.2.14",
-    "apollo-link-error": "^1.1.13",
-    "apollo-link-http": "1.5.15",
+    "apollo-client": "2.6.8",
+    "apollo-link": "^1.2.6",
+    "apollo-link-error": "^1.1.5",
+    "apollo-link-http": "^1.5.9",
     "graphql": "latest",
     "graphql-tag": "latest",
     "react": "16.8.6",
